--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <head> 
-    <title>Revival Modding</title>     
+    <title>Fauneefans</title>     
     <meta charset="UTF-8"> 
     <link href="Index.css" type="text/css" rel="stylesheet"/> 
 </head> 
@@ -9,9 +9,9 @@
         <ol> <a href="Index.html"><img src="assets/Fauneee.png"></a> 
         </ol>         <br> 
         <h1>Welcome to Fauneeefans.com!</h1> 
-        <p> <a href="https://www.twitch.tv/fauneeeetudiant" class="button">Twitch</a><a href="https://discord.gg/Fjvep3YWBM" class="button">Discord</a><a href="https://www.twitch.tv/khres_tv" class="button">Khres is also cool</a> </p> 
+        <p>  <a href="https://www.twitch.tv/fauneeeetudiant" class="button">Twitch</a><a href="https://discord.gg/Fjvep3YWBM" class="button">Discord</a><a href="https://www.twitch.tv/khres_tv" class="button">Khres is also cool</a>  </p> 
     </div>     
     <img class="Back2" src="assets/example.png"> 
     <p class="text1">The god-tier looper himself is here, wanna learn?<br><br>Good! Every DBD stream he plays survivor, learn<br>straight from the man himself!<br><br>He&apos;s also a top-tier killer in every way!<br><br>Don&apos;t underestimate the legend himself!</p>
-    <video width="1920" src="assets/clip.mp4" height="1080">Your browser doesn't support HTML5 video tag.</video>
-</div>
+    <p class="text1"></p>           
+</div> 
